--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "jspdf": "^3.0.1",
     "lodash": "latest",
     "lucide-react": "^0.454.0",
-    "next": "^15.5.5",
+    "next": "15.5.7",
     "puppeteer": "^24.29.1",
     "puppeteer-core": "^24.29.1",
     "react": "^18.3.1",
